# kb

./: .gitignore  CHANGELOG.yaml  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md  kbignore.md
scripts/: changelog_entry.py  changelog_to_md.py
src/kb/: __init__.py  api.py  chunk.py  cli.py  config.py  db.py  embed.py  expand.py  extract.py  filters.py  hyde.py  ingest.py  mcp_server.py  rerank.py  search.py
tests/: conftest.py  test_chunk.py  test_cli.py  test_cli_commands.py  test_config.py  test_db.py  test_embed.py  test_expand.py  test_feedback.py  test_filters.py  test_hyde.py  test_ingest.py  test_ingest_integration.py  test_mcp_server.py  test_rerank.py  test_search.py
