[project]
name = "kb"
version = "0.1.0"
description = "CLI knowledge base: index markdown + PDFs, hybrid search, RAG answers. Powered by sqlite-vec."
readme = "README.md"
authors = [
    { name = "Ariel Frischer", email = "arielfrischer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlite-vec",
    "openai",
]

[project.optional-dependencies]
all = [
    "chonkie[hub]",
    "pymupdf",
]
chunking = ["chonkie[hub]"]
pdf = ["pymupdf"]

[project.scripts]
kb = "kb.cli:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
